syntax = "proto3";

package pollen.state.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/sambigeara/pollen/api/genpb/pollen/state/v1;statev1";

message Service {
  string name = 1;
  uint32 port = 2 [(buf.validate.field).uint32 = {
    gt: 0
    lte: 65535
  }];
}

message GossipVectorClock {
  map<string, uint64> counters = 1;
}

message NetworkInfo {
  repeated string ips = 1;
  uint32 local_port = 2 [(buf.validate.field).uint32 = {
    gt: 0
    lte: 65535
  }];
}

message GossipEvent {
  string peer_id = 1 [(buf.validate.field).string = {
    pattern: "^[a-fA-F0-9]{64}$"
    len: 64
  }];
  uint64 counter = 2;
  string key = 3;
  bool deleted = 9;

  oneof value {
    NetworkInfo network = 4;
    uint32 external_port = 5;
    bytes identity_pub = 6 [(buf.validate.field).bytes = {len: 32}];
    Service service = 7;
    bool reachable = 8;
  }
}

message GossipEventBatch {
  repeated GossipEvent events = 1;
}
